k8s-config/dev.be-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flindt-backend
  namespace: flindt-website
spec:
  selector:
    matchLabels:
      app: flindt-backend
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: flindt-backend
        tier: backend
    spec:
      containers:
      - name: flindt-backend
        image: wearespindle/flindt_backend:latest
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "384Mi"
        lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "python manage.py collectstatic --no-input"]
            preStop:
              exec:
                command: ["/usr/local/bin/uwsgi", "--stop", "/tmp/project-master.pid"]
        imagePullPolicy: IfNotPresent
        securityContext:
           allowPrivilegeEscalation: false
