k8s-config/dev.be-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: flindt-be-service
  name: flindt-be-service
  namespace: flindt-website
spec:
  ports:
  - protocol: TCP
    port: 8005
    targetPort: 8000
  selector:
    app: flindt-backend
    tier: backend
  type: NodePort
status:
  loadBalancer: {}
